# MeowPi_protocol_invoker

./: .gitignore  CMakeLists.txt  README.md  cat_net.cpp  cat_net.h  main.cpp
pyd/: CatNet_call.py  catNet.cp310-win_amd64.pyd  catNet.cp311-win_amd64.pyd  catNet.cp312-win_amd64.pyd  catNet.cp37-win_amd64.pyd  catNet.cp38-win_amd64.pyd  catNet.cp39-win_amd64.pyd  event_code.py
